<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/DefaultViewMarginStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_introduction"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvCity"
            style="@style/DefaultViewMarginStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_search_description"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etCity"
                style="@style/DefaultViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnCitySearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/search_city"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNearby"
                style="@style/DefaultViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nearby_search_description"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnNearbySearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/search_nearby"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include layout="@layout/sight_list" />
        </FrameLayout>

        <Button
            android:id="@+id/btnSave"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>

</ScrollView>
